--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         node-version: '16.x'
         cache: 'npm'
-        
+    - run: git pull
     - run: npm ci
     - run: npm run build --if-present
     - run: |
