--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^2.0.0",
+    "autoprefixer": "^10.4.7",
     "node-sass": "^7.0.1",
+    "postcss": "^8.4.13",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
