--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^2.0.0",
     "autoprefixer": "^10.4.7",
+    "csstype": "^3.0.11",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.13",
     "rollup": "^2.3.4",
