--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-svg": "^2.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
@@ -30,6 +31,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@rollup/plugin-replace": "^4.0.0",
     "sirv-cli": "^2.0.0"
   }
 }
