--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@tsconfig/svelte": "^2.0.0",
     "autoprefixer": "^10.4.7",
     "csstype": "^3.0.11",
-    "node-sass": "^7.0.1",
     "postcss": "^8.4.13",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
@@ -24,6 +23,7 @@
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-svg": "^2.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "sass": "^1.52.1",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.10.6",
