--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,15 @@
 # testing
 /coverage
 
-# production
 /build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+
 
 # misc
 .DS_Store
@@ -24,4 +31,3 @@ yarn-error.log*
 README.md
 
 *_Old.*
-svelte/public/build/
