--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,14 @@ jobs:
       - name: git-checkout
         uses: actions/checkout@v2
 
+      - name: Install pNPM
+        run: npm i -g pnpm
+
       - name: Install dependencies
-        run: npm i
+        run: pnpm i
 
       - name: Build
-        run: npm run build # The build command of your project
+        run: pnpm build
 
       - name: Push
         uses: s0/git-publish-subdir-action@develop
