--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@sveltejs/adapter-auto": "^2.1.0",
     "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/kit": "^1.20.5",
+    "@types/animejs": "^3.1.7",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
+    "animejs": "^3.2.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
@@ -29,8 +31,8 @@
     "svelte": "^4.0.0",
     "svelte-check": "^3.4.4",
     "tslib": "^2.5.3",
-    "vite": "^4.3.9",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vite": "^4.3.9"
   },
   "type": "module"
 }
