--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-svelte": "^2.31.0",
+    "postcss": "^8.4.24",
+    "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
     "sass": "^1.63.6",
     "svelte": "^4.0.0",
     "svelte-check": "^3.4.4",
+    "svelte-preprocess": "^5.0.4",
     "tslib": "^2.5.3",
     "typescript": "^5.0.0",
     "vite": "^4.3.9"
