--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "ignoreDeprecations": "5.0",
-    "paths": {
-      "$lib": ["./src/lib"],
-      "$lib/*": ["./src/lib/*"]
-    }
+    "ignoreDeprecations": "5.0"
   },
   "include": ["./src/lib/Typings/**/*.d.ts"]
   // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
