--- a/package.json
+++ b/package.json
@@ -1,45 +1,52 @@
 {
-	"name": "porfolio",
-	"private": true,
+	"name": "eliasval.github.io",
+	"license": "MIT",
+	"author": {
+		"name": "EliasVal",
+		"url": "https://eliasval.github.io",
+		"email": "eliasval.dev@gmail.com"
+	},
+	"repository": {
+		"url": "https://github.com/eliasval/eliasval.github.io"
+	},
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
+		"prepare": "svelte-kit sync",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint ."
 	},
-	"devDependencies": {
-		"@eslint/compat": "^1.2.5",
-		"@eslint/js": "^9.18.0",
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@types/node": "^22.15.3",
-		"eslint": "^9.18.0",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^3.0.0",
-		"globals": "^16.0.0",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.3",
-		"sass-embedded": "^1.87.0",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.20.0",
-		"vite": "^6.2.6"
-	},
-	"pnpm": {
-		"onlyBuiltDependencies": [
-			"esbuild"
-		]
+	"engines": {
+		"node": ">=20",
+		"pnpm": ">=10.27"
 	},
 	"dependencies": {
-		"animejs": "^4.0.2"
+		"animejs": "^4.2.2"
+	},
+	"devDependencies": {
+		"@eslint/compat": "^2.0.0",
+		"@eslint/js": "^9.39.2",
+		"@sveltejs/adapter-auto": "^7.0.0",
+		"@sveltejs/adapter-static": "^3.0.10",
+		"@sveltejs/kit": "^2.49.2",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@types/node": "^24.10.4",
+		"eslint": "^9.39.2",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-svelte": "^3.13.1",
+		"globals": "^16.5.0",
+		"prettier": "^3.7.4",
+		"prettier-plugin-svelte": "^3.4.1",
+		"sass-embedded": "^1.97.1",
+		"svelte": "^5.46.1",
+		"svelte-check": "^4.3.5",
+		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.51.0",
+		"vite": "^7.3.0"
 	}
 }
