--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
 		"pnpm": ">=10.27"
 	},
 	"dependencies": {
-		"animejs": "^4.2.2"
+		"@tailwindcss/vite": "^4.1.18",
+		"animejs": "^4.2.2",
+		"tailwindcss": "^4.1.18"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^2.0.0",
