--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"globals": "^16.5.0",
 		"prettier": "^3.7.4",
 		"prettier-plugin-svelte": "^3.4.1",
+		"prettier-plugin-tailwindcss": "^0.7.2",
 		"sass-embedded": "^1.97.1",
 		"svelte": "^5.46.1",
 		"svelte-check": "^4.3.5",
